--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
 <!-- home
    ================================================== -->
    <section id="home" class="home-particles">  
-   
+   	<!--DFROST LOGO CENTER -->
+	<div id="logo-wrapper" class="logo-wrapper">
+	</div>
    </section> <!-- /home -->
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
