Parallax Effect Logo
Added Parallax Effect on Dfrost Logo

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 	<!-- Bootstrap and MDB import -->
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.3.0/css/mdb.min.css" rel="stylesheet"> 
+	<link href='http://fonts.googleapis.com/css?family=Varela' rel='stylesheet' type='text/css'>
+
 	<link rel="stylesheet" href="css/styles.css">
+	
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 	<!--[if lt IE 9]>
@@ -23,13 +26,16 @@
     <div id="topbar">
     	<div class="nidlogo"></div>
         <div class="topbarlinks"><a class="btn" href="#">REGISTER NOW</a></div>
-    </div>
-
+       	<!-- Menu elements -->
+        
 <!-- home
    ================================================== -->
    <section id="home" class="home-particles">  
    	<!--DFROST LOGO CENTER -->
 	<div id="logo-wrapper" class="logo-wrapper">
+		<div id="logo_back"></div>
+		<div id="logo_mid"></div>
+		<div id="logo_front"></div>
 	</div>
    </section> <!-- /home -->
 
@@ -40,7 +46,9 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script src="js/modernizr.js"></script>
 <script src="js/plugins.js"></script>
+<script src="js/mainAnimation.js"></script>
 <script src="js/main.js"></script>
+
 
 </body>
 </html>
