--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.3.0/css/mdb.min.css" rel="stylesheet"> 
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" rel="stylesheet">
+	<link href="css/rippler.min.css" rel="stylesheet">
 	<link href='http://fonts.googleapis.com/css?family=Varela' rel='stylesheet' type='text/css'>
 
 	<link rel="stylesheet" href="css/styles.css">
@@ -35,7 +36,7 @@
 <!-- home
    ================================================== -->
   
-   <section id="home" class="home-particles">  
+   <section id="home" class="home-particles rippler rippler-default">  
    	<!--DFROST LOGO CENTER -->
 	<div id="logo-wrapper" class="logo-wrapper">
 		<div id="logo_back" class="fadeIn"></div>
@@ -54,7 +55,8 @@
 <script src="js/modernizr.js"></script>
 <script src="js/plugins.js"></script>
 <script src="js/mainAnimation.js"></script>
-<script src="js/main.js"></script>
+<script type="text/javascript" src="js/jquery.rippler.min.js"></script>
+<script type="text/javascript" src="js/main.js"></script>
 
 
 </body>
