Menu button added with interaction
menu added with interaction

--- a/index.html
+++ b/index.html
@@ -30,9 +30,43 @@
     	<div class="nidlogo"></div>
         <div class="topbarlinks"><a class="btn" href="#">REGISTER NOW</a></div>
     </div>
-    
-       	<!-- Menu elements -->
-        
+    <!-- Menu elements -->
+   	<div  class="open">
+	<span class="cls"></span>
+	<span>
+		<ul class="sub-menu ">
+			<li>
+				<a href="#" title="home">Home</a>
+			</li>
+			<li>
+				<a href="#about" title="about">About</a>
+			</li>
+			<li>
+				<a href="#schedule" title="schedule">Schedule</a>
+			</li>
+			<li>
+				<a href="#speakers" title="speakers">Speakers</a>
+			</li>
+			<li>
+				<a href="#workshops" title="workshops">Workshops</a>
+			</li>
+			<li>
+				<a href="#competitions" title="competitions">Competitions</a>
+			</li>
+			<li>
+				<a href="#partners" title="partners">Partners</a>
+			</li>
+			<li>
+				<a href="#venue" title="venue">Venue</a>
+			</li>
+			<li>
+				<a href="#contact" title="contact">Contact</a>
+			</li>
+		</ul>
+	</span>
+	<span class="cls"></span>
+	</div>
+
 <!-- home
    ================================================== -->
   
