removed rippler effect for mobile devices
768 window size compared

--- a/index.html
+++ b/index.html
@@ -77,6 +77,13 @@
 		<div id="logo_mid" class="fadeIn"></div>
 		<div id="logo_front" class="fadeIn"></div>
 	</div>
+	<!--date venue schedule CENTER -->
+	<!-- <div id="DateVenue" class="logo-wrapper">
+		<div id="logo_back" class="fadeIn"></div>
+		<div id="logo_mid" class="fadeIn"></div>
+		<div id="logo_front" class="fadeIn"></div>
+	</div> -->
+
    </section>
   
    <!-- /home -->
