Rippler enabled for >768px

--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
 		<div id="logo_front" class="fadeIn"></div>
 	</div>
    </section>
+
+   <!--div class="rippler rippler-default">
+   		<div class="btn btn-primary">rippler test</div>
+   </div-->
   
    <!-- /home -->
 
