adding scrolling divs
adding scrolling divs

--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
     
     <div id="topbar">
     	<div class="nidlogo"></div>
-        <div class="topbarlinks"><a class="btn" href="#">REGISTER NOW</a></div>
     </div>
     <!-- Menu elements -->
    	<div  class="open">
@@ -77,20 +76,75 @@
 		<div id="logo_mid" class="fadeIn"></div>
 		<div id="logo_front" class="fadeIn"></div>
 	</div>
-	<!--date venue schedule CENTER -->
-	<!-- <div id="DateVenue" class="logo-wrapper">
-		<div id="logo_back" class="fadeIn"></div>
-		<div id="logo_mid" class="fadeIn"></div>
-		<div id="logo_front" class="fadeIn"></div>
-	</div> -->
+	<div class="topbarlinks"><a class="btn" href="#">REGISTER NOW</a></div>
 
-   </section>
-
-   <!--div class="rippler rippler-default">
-   		<div class="btn btn-primary">rippler test</div>
-   </div-->
+	<!-- Date/ Venue/ Schedule
+   ================================================== -->
+   <div id="" class="date_venue_schedule">
+   	<div class="date"><p>Lorem Ipsum</p></div>
+   	<div class="venue"><p>Lorem Ipsum</p></div>
+   	<div class="schedule"><p>Lorem Ipsum</p></div>   	
+   </div>
+	</section>
   
    <!-- /home -->
+   
+   <!--About-->
+   	<section id="" class="about">
+   		<h2>About</h2>
+   	</section>
+
+   <!--/About-->
+   
+   <!--Schedule-->
+    <section id="" class="schdl">
+    	<h2>Schedule</h2>
+    </section>
+   <!--/Schedule-->
+   
+   <!--Speakers-->
+   	<section id="" class="speakers">
+   		<h2>Speakers</h2>
+   	</section>
+   <!--/Speakers-->
+   
+   <!--Workshops-->
+	<section id="" class="workshops">
+		<h2>Workshops</h2>
+	</section>
+   <!--/Workshops-->
+
+   <!--Competitions-->
+	<section id="" class="competitions">
+		<h2>Competitions</h2>
+	</section>
+   <!--/Competitions-->
+
+   <!--Extras-->
+	<section id="" class="extras">
+		<h2>Extras</h2>
+	</section>
+   <!--/Extras-->
+
+   <!--Partners-->
+	<section id="" class="partners">
+		<h2>Partners</h2>
+	</section>
+   <!--/Partners-->
+
+   <!--venue-->
+	<section id="" class="venue_sec">
+		<h2>Venue</h2>
+	</section>
+   <!--/venue-->
+
+   <!--contact-->
+	<section id="" class="contact">
+		<h2>Contact</h2>
+	</section>
+   <!--/contact-->
+
+
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
 <script src="js/jquery-1.11.3.min.js"></script>
