adding extras tab
adding extras tab

--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
 				<a href="#competitions" title="competitions">Competitions</a>
 			</li>
 			<li>
+				<a href="#extras" title="extras">Extras</a>
+			</li>
+			<li>
 				<a href="#partners" title="partners">Partners</a>
 			</li>
 			<li>
