done something i dont know

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" rel="stylesheet">
 	<link href="css/rippler.min.css" rel="stylesheet">
 	<link href='http://fonts.googleapis.com/css?family=Varela' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
 
 	<link rel="stylesheet" href="css/styles.css">
 	
@@ -89,8 +91,8 @@
 	<!-- Date/ Venue/ Schedule
    ================================================== -->
     <div id="" class="date_venue_schedule">
-   	<div class="date"><p>Lorem Ipsum</p></div>
-   	<div class="venue"><p>Lorem Ipsum</p></div>
+   	<div class="date"><i class="fa fa-calendar" aria-hidden="true"></i>18<sup>th</sup> &amp; 19<sup>th</sup> March, 2017</div>
+   	<div class="venue"><i class="fa fa-map-marker" aria-hidden="true"></i>National Institute of Design</div>
    	<div class="schedule"><p>Lorem Ipsum</p></div>   	
    
    </div>
