--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<!-- <link href="css/rippler.min.css" rel="stylesheet"> -->
 	<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="css/style_new.css">
+	<link rel="stylesheet" href="css/style.css">
 	
 	<!-- HTML5 shiv and Respond.js for IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
