changed opacity for bundi and changed text a bit
changed opacity for bundi and changed text a bit

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 				<div class="date">
 					<a>
 						<i class="fa fa-calendar" aria-hidden="true"></i>
-						<span>18<sup>th</sup> &amp; 19<sup>th</sup> March, 2017</span>
+						<span>18 - 19 March</span>
 					</a>
 				</div>
 			   	<div class="venue">
