changing icons and menu color
changing icons and menu color

--- a/index.html
+++ b/index.html
@@ -32,9 +32,7 @@
 				<span id="cls"></span>
 				<span>
 					<ul class="sub-menu ">
-						<li>
-							<a href="#home" title="home">Home</a>
-						</li>
+						
 						<li>
 							<a href="#about" title="about">About</a>
 						</li>
@@ -55,9 +53,6 @@
 						</li>
 						<li>
 							<a href="#partners" title="partners">Partners</a>
-						</li>
-						<li>
-							<a href="#venue_sec" title="venue">Venue</a>
 						</li>
 						<li>
 							<a href="#contact" title="contact">Contact</a>
@@ -81,19 +76,22 @@
 			<div class="options">
 				<div class="date">
 					<a>
-						<i class="fa fa-calendar" aria-hidden="true"></i>
+						<!-- <i class="fa fa-calendar" aria-hidden="true"></i> -->
+						<div id="calendar" class="fadeIn"></div>
 						<span>18 - 19 March</span>
 					</a>
 				</div>
 			   	<div class="venue">
 			   		<a>
-				   		<i class="fa fa-map-marker" aria-hidden="true"></i>
+				   		<!-- <i class="fa fa-map-marker" aria-hidden="true"></i> -->
+				   		<div id="location" class="fadeIn"></div>
 				   		<span>National Institute of Design</span>
 			   		</a>
 			   	</div>
 			   	<div class="schedule">
 			   		<a>
-				   		<i class="fa fa-clock-o" aria-hidden="true"></i>
+				   		<!-- <i class="fa fa-clock-o" aria-hidden="true"></i> -->
+				   		<div id="time" class="fadeIn"></div>
 				   		<span>Schedule</span>
 			   		</a>
 			   	</div> 
