home icons fixed

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.3.0/css/mdb.min.css" rel="stylesheet">  -->
 	<!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" rel="stylesheet"> -->
 	<!-- <link href="css/rippler.min.css" rel="stylesheet"> -->
-	<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,700,900&effect=anaglyph" rel="stylesheet"> 
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/style.css">
 	
@@ -72,26 +72,29 @@
 				<div id="logo_mid" class="fadeIn"></div>
 				<div id="logo_front" class="fadeIn"></div>
 			</div>
-			<div class="register_btn"><a href="#">REGISTER NOW</a></div>
+			<div class="register_btn"><a class="font-effect-anaglyph" href="#">REGISTER NOW</a></div>
 			<div class="options">
 				<div class="date">
 					<a>
 						<!-- <i class="fa fa-calendar" aria-hidden="true"></i> -->
-						<div id="calendar" class="fadeIn"></div>
+						<!-- <div id="calendar" class="fadeIn"></div> -->
+						<img src="img/icons/calendar.svg"><br>
 						<span>18 - 19 March</span>
 					</a>
 				</div>
 			   	<div class="venue">
 			   		<a>
 				   		<!-- <i class="fa fa-map-marker" aria-hidden="true"></i> -->
-				   		<div id="location" class="fadeIn"></div>
+				   		<!-- <div id="location" class="fadeIn"></div> -->
+				   		<img src="img/icons/location.svg"><br>
 				   		<span>National Institute of Design</span>
 			   		</a>
 			   	</div>
 			   	<div class="schedule">
 			   		<a>
 				   		<!-- <i class="fa fa-clock-o" aria-hidden="true"></i> -->
-				   		<div id="time" class="fadeIn"></div>
+				   		<!-- <div id="time" class="fadeIn"></div> -->
+				   		<img src="img/icons/schedule.svg"><br>
 				   		<span>Schedule</span>
 			   		</a>
 			   	</div> 
