menu shape changed
menu shape changed

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<span id="cls"></span>
 				<span>
 					<ul class="sub-menu ">
-						
+						<div id="menu_content">
 						<li>
 							<a href="#about" title="about">About</a>
 						</li>
@@ -57,6 +57,7 @@
 						<li>
 							<a href="#contact" title="contact">Contact</a>
 						</li>
+						</div>
 					</ul>
 				</span>
 				<span id="cls"></span>
