--- a/index.html
+++ b/index.html
@@ -128,67 +128,67 @@
 		    			<h3>DAY 1</h3>
 		    			<div class="schdl_cnt">
 		    				<div class="sub_hd">
-		    					<span class="left">dLABS</span>|<span class="right">Workshops</span>
+		    					<span class="left">dLabs</span><span class="sep">|</span><span class="right">Workshops</span>
 		    				</div>
 		    				<div class="event_ls">
 			    				<span class="time">09:30</span>
-			    				<span class="high">Hands on Bamboo</span>
+			    				<span class="high lab">Hands on Bamboo</span>
 			    				<span class="low">CS Susanth & team</span>
 		    				</div>
 		    				<div class="event_ls">
-			    				<span class="time">09:30</span>
-			    				<span class="high">Hands on Bamboo</span>
-			    				<span class="low">CS Susanth & team</span>
+			    				<span class="time">11:30</span>
+			    				<span class="high lab">Graphic Design</span>
+			    				<span class="low">Gregor Strutz, INKL GmbH</span>
 		    				</div>
 		    				<div class="event_ls">
-			    				<span class="time">09:30</span>
-			    				<span class="high">Hands on Bamboo</span>
-			    				<span class="low">CS Susanth & team</span>
+			    				<span class="time">14:30</span>
+			    				<span class="high lab">TBA</span>
+			    				<span class="low">TBA</span>
 		    				</div>
 		    			</div>
 		    			<div class="schdl_cnt">
 		    				<div class="sub_hd">
-		    					<span class="left">dLABS</span>|<span class="right">Workshops</span>
+		    					<span class="left">dTalks</span><span class="sep">|</span><span class="right">Twenty-minute TED style talks</span>
 		    				</div>
 		    				<div class="event_ls">
 			    				<span class="time">09:30</span>
-			    				<span class="high">Hands on Bamboo</span>
-			    				<span class="low">CS Susanth & team</span>
+			    				<span class="high tlk">Mark Shaggs</span>
+			    				<span class="low">Co-creator, Farmville</span>
 		    				</div>
 		    				<div class="event_ls">
-			    				<span class="time">09:30</span>
-			    				<span class="high">Hands on Bamboo</span>
-			    				<span class="low">CS Susanth & team</span>
+			    				<span class="time">11:30</span>
+			    				<span class="high tlk">Sankia Malik</span>
+			    				<span class="low">Branding</span>
 		    				</div>
 		    				<div class="event_ls">
-			    				<span class="time">09:30</span>
-			    				<span class="high">Hands on Bamboo</span>
-			    				<span class="low">CS Susanth & team</span>
+			    				<span class="time">14:30</span>
+			    				<span class="high tlk">TBA</span>
+			    				<span class="low">TBA</span>
 		    				</div>
 		    			</div>
 		    			<div class="schdl_cnt">
 		    				<div class="sub_hd">
-		    					<span class="left">dLABS</span>|<span class="right">Workshops</span>
+		    					<span class="left">Events</span><span class="sep">|</span><span class="right">Workshops</span>
 		    				</div>
 		    				<div class="event_ls">
-			    				<span class="time">09:30</span>
-			    				<span class="high">Hands on Bamboo</span>
-			    				<span class="low">CS Susanth & team</span>
+			    				<span class="time">16:30</span>
+			    				<span class="high evt">Cultural Event - Dance</span>
+			    				<span class="low">NID students</span>
 		    				</div>
 		    				<div class="event_ls">
-			    				<span class="time">09:30</span>
-			    				<span class="high">Hands on Bamboo</span>
-			    				<span class="low">CS Susanth & team</span>
+			    				<span class="time">18:30</span>
+			    				<span class="high evt">Sand Art</span>
+			    				<span class="low">Jahnavi Banaki, NID</span>
 		    				</div>
 		    				<div class="event_ls">
-			    				<span class="time">09:30</span>
-			    				<span class="high">Hands on Bamboo</span>
-			    				<span class="low">CS Susanth & team</span>
+			    				<span class="time">20:30</span>
+			    				<span class="high evt">Vasu Dixit Collective</span>
+			    				<span class="low">Band ensemble</span>
 		    				</div>
 		    				<div class="event_ls">
-			    				<span class="time">09:30</span>
-			    				<span class="high">Hands on Bamboo</span>
-			    				<span class="low">CS Susanth & team</span>
+			    				<span class="time">21:30</span>
+			    				<span class="high evt">Cultural Event - Dance</span>
+			    				<span class="low">NID students</span>
 		    				</div>
 		    			</div>
 		    		</div>
@@ -197,67 +197,67 @@
 		    			<h3>DAY 2</h3>
 		    			<div class="schdl_cnt">
 		    				<div class="sub_hd">
-		    					<span class="left">dLABS</span>|<span class="right">Workshops</span>
+		    					<span class="left">dLabs</span><span class="sep">|</span><span class="right">Workshops</span>
 		    				</div>
 		    				<div class="event_ls">
 			    				<span class="time">09:30</span>
-			    				<span class="high">Hands on Bamboo</span>
+			    				<span class="high lab">Hands on Bamboo</span>
 			    				<span class="low">CS Susanth & team</span>
 		    				</div>
 		    				<div class="event_ls">
-			    				<span class="time">09:30</span>
-			    				<span class="high">Hands on Bamboo</span>
-			    				<span class="low">CS Susanth & team</span>
+			    				<span class="time">11:30</span>
+			    				<span class="high lab">Graphic Design</span>
+			    				<span class="low">Gregor Strutz, INKL GmbH</span>
 		    				</div>
 		    				<div class="event_ls">
-			    				<span class="time">09:30</span>
-			    				<span class="high">Hands on Bamboo</span>
-			    				<span class="low">CS Susanth & team</span>
+			    				<span class="time">14:30</span>
+			    				<span class="high lab">TBA</span>
+			    				<span class="low">TBA</span>
 		    				</div>
 		    			</div>
 		    			<div class="schdl_cnt">
 		    				<div class="sub_hd">
-		    					<span class="left">dLABS</span>|<span class="right">Workshops</span>
+		    					<span class="left">dTalks</span><span class="sep">|</span><span class="right">Twenty-minute TED style talks</span>
 		    				</div>
 		    				<div class="event_ls">
 			    				<span class="time">09:30</span>
-			    				<span class="high">Hands on Bamboo</span>
-			    				<span class="low">CS Susanth & team</span>
+			    				<span class="high tlk">Mark Shaggs</span>
+			    				<span class="low">Co-creator, Farmville</span>
 		    				</div>
 		    				<div class="event_ls">
-			    				<span class="time">09:30</span>
-			    				<span class="high">Hands on Bamboo</span>
-			    				<span class="low">CS Susanth & team</span>
+			    				<span class="time">11:30</span>
+			    				<span class="high tlk">Sankia Malik</span>
+			    				<span class="low">Branding</span>
 		    				</div>
 		    				<div class="event_ls">
-			    				<span class="time">09:30</span>
-			    				<span class="high">Hands on Bamboo</span>
-			    				<span class="low">CS Susanth & team</span>
+			    				<span class="time">14:30</span>
+			    				<span class="high tlk">TBA</span>
+			    				<span class="low">TBA</span>
 		    				</div>
 		    			</div>
 		    			<div class="schdl_cnt">
 		    				<div class="sub_hd">
-		    					<span class="left">dLABS</span>|<span class="right">Workshops</span>
+		    					<span class="left">Events</span><span class="sep">|</span><span class="right">Workshops</span>
 		    				</div>
 		    				<div class="event_ls">
-			    				<span class="time">09:30</span>
-			    				<span class="high">Hands on Bamboo</span>
-			    				<span class="low">CS Susanth & team</span>
+			    				<span class="time">16:30</span>
+			    				<span class="high evt">Cultural Event - Dance</span>
+			    				<span class="low">NID students</span>
 		    				</div>
 		    				<div class="event_ls">
-			    				<span class="time">09:30</span>
-			    				<span class="high">Hands on Bamboo</span>
-			    				<span class="low">CS Susanth & team</span>
+			    				<span class="time">18:30</span>
+			    				<span class="high evt">Sand Art</span>
+			    				<span class="low">Jahnavi Banaki, NID</span>
 		    				</div>
 		    				<div class="event_ls">
-			    				<span class="time">09:30</span>
-			    				<span class="high">Hands on Bamboo</span>
-			    				<span class="low">CS Susanth & team</span>
+			    				<span class="time">20:30</span>
+			    				<span class="high evt">Vasu Dixit Collective</span>
+			    				<span class="low">Band ensemble</span>
 		    				</div>
 		    				<div class="event_ls">
-			    				<span class="time">09:30</span>
-			    				<span class="high">Hands on Bamboo</span>
-			    				<span class="low">CS Susanth & team</span>
+			    				<span class="time">21:30</span>
+			    				<span class="high evt">Cultural Event - Dance</span>
+			    				<span class="low">NID students</span>
 		    				</div>
 		    			</div>
 		    		</div>
