dtalks links updated

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 		    				<div class="event_ls">
 			    				<span class="time">09:30</span>
 			    				<span class="high lab">Hands on Bamboo</span>
-			    				<span class="low">CS Susanth & team</span>
+			    				<span class="low">CS Susanth &amp; team</span>
 		    				</div>
 		    				<div class="event_ls">
 			    				<span class="time">11:30</span>
@@ -199,7 +199,7 @@
 		    				<div class="event_ls">
 			    				<span class="time">09:30</span>
 			    				<span class="high lab">Hands on Bamboo</span>
-			    				<span class="low">CS Susanth & team</span>
+			    				<span class="low">CS Susanth &amp; team</span>
 		    				</div>
 		    				<div class="event_ls">
 			    				<span class="time">11:30</span>
@@ -270,31 +270,31 @@
 			   	</div>
 			   	<div class="first_row">
 			   		<div class="speaker">
-			   			<img src="img/Final_backgrounds/Vilas Nayak.jpg" >
+			   			<img src="img/Final_backgrounds/Jay Dutta.png" >
 			   			<h4>MARK SHAGGS</h4>
 			   			<span class="des">Co-creater, Farmville</span>
 			   			<p>On the other hand the uniqueness of NID's animation film design curriculum has largely remained invisible and underrated due to the lack of wider awarness and absence of academic culture from the national agenda of Indian Animation</p>
 			   		</div>
 			   		<div class="speaker">
-			   			<img src="img/Final_backgrounds/Vilas Nayak.jpg" >
+			   			<img src="img/Final_backgrounds/Kaveri Gopalkrishnan.png" >
 			   			<h4>MARK SHAGGS</h4>
 			   			<span class="des">Co-creater, Farmville</span>
 			   			<p>On the other hand the uniqueness of NID's animation film design curriculum has largely remained invisible and underrated due to the lack of wider awarness and absence of academic culture from the national agenda of Indian Animation</p>
 			   		</div>
 			   		<div class="speaker">
-			   			<img src="img/Final_backgrounds/Vilas Nayak.jpg" >
+			   			<img src="img/Final_backgrounds/Mark Skaggs.png" >
 			   			<h4>MARK SHAGGS</h4>
 			   			<span class="des">Co-creater, Farmville</span>
 			   			<p>On the other hand the uniqueness of NID's animation film design curriculum has largely remained invisible and underrated due to the lack of wider awarness and absence of academic culture from the national agenda of Indian Animation</p>
 			   		</div>
 			   		<div class="speaker">
-			   			<img src="img/Final_backgrounds/Vilas Nayak.jpg" >
+			   			<img src="img/Final_backgrounds/Sanya Malik.png" >
 			   			<h4>MARK SHAGGS</h4>
 			   			<span class="des">Co-creater, Farmville</span>
 			   			<p>On the other hand the uniqueness of NID's animation film design curriculum has largely remained invisible and underrated due to the lack of wider awarness and absence of academic culture from the national agenda of Indian Animation</p>
 			   		</div>
 			   		<div class="speaker">
-			   			<img src="img/Final_backgrounds/Vilas Nayak.jpg" >
+			   			<img src="img/Final_backgrounds/Vilas Nayak.png" >
 			   			<h4>MARK SHAGGS</h4>
 			   			<span class="des">Co-creater, Farmville</span>
 			   			<p>On the other hand the uniqueness of NID's animation film design curriculum has largely remained invisible and underrated due to the lack of wider awarness and absence of academic culture from the national agenda of Indian Animation</p>
