fixed navbar stuff

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 </head>
 <body>
 	<header id="main_header" class="main_header">
-		<div class="nid_logo" src=""></div>
+		<!-- <div class="nid_logo" src=""></div> -->
+		<img src="img/NID_white_logo.png" class="nid-logo-img" alt="">
 		<nav class="main_menu page-navigation">
 			<!-- <p>menu</p> -->
 			<!-- Menu elements -->
