layout fixes mostly

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 		    				</div>
 		    				<div class="event_ls">
 			    				<span class="time">09:30</span>
-			    				<span class="high tlk">Mark Shaggs</span>
+			    				<span class="high tlk">SOME D00D</span>
 			    				<span class="low">Co-creator, Farmville</span>
 		    				</div>
 		    				<div class="event_ls">
@@ -274,7 +274,7 @@
 		    				</div>
 		    				<div class="event_ls">
 			    				<span class="time">09:30</span>
-			    				<span class="high tlk">Mark Shaggs</span>
+			    				<span class="high tlk">SOME D00D</span>
 			    				<span class="low">Co-creator, Farmville</span>
 		    				</div>
 		    				<div class="event_ls">
@@ -328,36 +328,50 @@
 			   		<img src="img/Final_backgrounds/dTalks-Holder.svg" class="speaker-cutout-img" alt="">
 			   	</div>
 			   	<div class="first_row">
-			   		<div class="speaker">
-			   			<img src="img/Final_backgrounds/Mark-Skaggs.jpg" >
-			   			<h4>MARK SHAGGS</h4>
-			   			<span class="des">Co-creater, Farmville</span>
-			   			<p>On the other hand the uniqueness of NID's animation film design curriculum has largely remained invisible and underrated due to the lack of wider awarness and absence of academic culture from the national agenda of Indian Animation</p>
-			   		</div>
-			   		<div class="speaker">
-			   			<img src="img/Final_backgrounds/Kaveri-Gopalkrishnan.jpg" >
-			   			<h4>MARK SHAGGS</h4>
-			   			<span class="des">Co-creater, Farmville</span>
-			   			<p>On the other hand the uniqueness of NID's animation film design curriculum has largely remained invisible and underrated due to the lack of wider awarness and absence of academic culture from the national agenda of Indian Animation</p>
-			   		</div>
-			   		<div class="speaker">
-			   			<img src="img/Final_backgrounds/Vilas-Nayak.jpg" >
-			   			<h4>MARK SHAGGS</h4>
-			   			<span class="des">Co-creater, Farmville</span>
-			   			<p>On the other hand the uniqueness of NID's animation film design curriculum has largely remained invisible and underrated due to the lack of wider awarness and absence of academic culture from the national agenda of Indian Animation</p>
-			   		</div>
-			   		<div class="speaker">
-			   			<img src="img/Final_backgrounds/Sanya-Malik.jpg" >
-			   			<h4>MARK SHAGGS</h4>
-			   			<span class="des">Co-creater, Farmville</span>
-			   			<p>On the other hand the uniqueness of NID's animation film design curriculum has largely remained invisible and underrated due to the lack of wider awarness and absence of academic culture from the national agenda of Indian Animation</p>
-			   		</div>
-			   		<div class="speaker">
-			   			<img src="img/Final_backgrounds/Jay-Dutta.jpg" >
-			   			<h4>MARK SHAGGS</h4>
-			   			<span class="des">Co-creater, Farmville</span>
-			   			<p>On the other hand the uniqueness of NID's animation film design curriculum has largely remained invisible and underrated due to the lack of wider awarness and absence of academic culture from the national agenda of Indian Animation</p>
-			   		</div>
+			   		<div class="col col1">
+			   			<div class="speaker">
+							<img src="img/Final_backgrounds/Vilas-Nayak.jpg" >
+			   				<h4>SOME D00D</h4>
+			   				<span class="des">Co-creater, Farmville</span>
+			   				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse impedit, rerum iure. Voluptate optio corporis accusantium laboriosam nemo distinctio.</p>
+			   			</div>
+			   			<div class="speaker">
+			   				<img src="img/Final_backgrounds/Kaveri-Gopalkrishnan.jpg" >
+			   				<h4>SOME D00D</h4>
+			   				<span class="des">Co-creater, Farmville</span>
+			   				<p>
+			   				<span>Accusamus error animi officia autem nostrum optio accusantium minus minima tempore fugiat quasi aut natus fugit quos facilis odio doloribus.</span>
+			   				<span></span></p>
+			   			</div>
+			   		</div><!--
+					--><div class="col col2">
+						<div class="speaker">
+			   				<img src="img/Final_backgrounds/Mark-Skaggs.jpg" >
+							<h4>SOME D00D</h4>
+							<span class="des">Co-creater, Farmville</span>
+							<p>Eligendi dolorem fugit iste, iusto repellat aspernatur dolore maxime tenetur ipsa incidunt velit ab quidem quis vitae.</p>
+						</div>
+						<div class="speaker">
+							<img src="img/Final_backgrounds/Jay-Dutta.jpg" >
+							<h4>SOME D00D</h4>
+							<span class="des">Co-creater, Farmville</span>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore optio nisi nesciunt accusantium obcaecati ullam.</p>
+						</div>
+					</div><!--
+					--><div class="col col3">
+						<div class="speaker">
+							<img src="img/Final_backgrounds/Sanya-Malik.jpg" >
+							<h4>SOME D00D</h4>
+							<span class="des">Co-creater, Farmville</span>
+							<p>Quia vel explicabo vitae, magnam? Quasi quidem nisi fuga atque eos ipsum, soluta distinctio laborum animi aliquam, iusto.</p>
+						</div>
+						<div class="speaker">
+							<img src="https://www.placecage.com/g/200/200" >
+							<h4>SOME D00D</h4>
+							<span class="des">Co-creater, Farmville</span>
+							<p>Cumque, quasi quis accusantium amet, iste doloremque deleniti velit ad esse quae mollitia perspiciatis modi aspernatur.</p>
+						</div>
+					</div>
 				</div>
 		   	</section>
 		   <!--/Speakers-->
