dtalks polypic added

--- a/index.html
+++ b/index.html
@@ -330,13 +330,13 @@
 			   	<div class="first_row">
 			   		<div class="col col1">
 			   			<div class="speaker">
-							<img src="img/Final_backgrounds/Vilas-Nayak.jpg" >
+							<img src="img/Final_backgrounds/Vilas-Nayak.png" >
 			   				<h4>SOME D00D</h4>
 			   				<span class="des">Co-creater, Farmville</span>
 			   				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse impedit, rerum iure. Voluptate optio corporis accusantium laboriosam nemo distinctio.</p>
 			   			</div>
 			   			<div class="speaker">
-			   				<img src="img/Final_backgrounds/Kaveri-Gopalkrishnan.jpg" >
+			   				<img src="img/Final_backgrounds/Kaveri-Gopalkrishnan.png" >
 			   				<h4>SOME D00D</h4>
 			   				<span class="des">Co-creater, Farmville</span>
 			   				<p>
@@ -346,13 +346,13 @@
 			   		</div><!--
 					--><div class="col col2">
 						<div class="speaker">
-			   				<img src="img/Final_backgrounds/Mark-Skaggs.jpg" >
+			   				<img src="img/Final_backgrounds/Mark-Skaggs.png" >
 							<h4>SOME D00D</h4>
 							<span class="des">Co-creater, Farmville</span>
 							<p>Eligendi dolorem fugit iste, iusto repellat aspernatur dolore maxime tenetur ipsa incidunt velit ab quidem quis vitae.</p>
 						</div>
 						<div class="speaker">
-							<img src="img/Final_backgrounds/Jay-Dutta.jpg" >
+							<img src="img/Final_backgrounds/Jay-Dutta.png" >
 							<h4>SOME D00D</h4>
 							<span class="des">Co-creater, Farmville</span>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore optio nisi nesciunt accusantium obcaecati ullam.</p>
@@ -360,7 +360,7 @@
 					</div><!--
 					--><div class="col col3">
 						<div class="speaker">
-							<img src="img/Final_backgrounds/Sanya-Malik.jpg" >
+							<img src="img/Final_backgrounds/Sanya-Malik.png" >
 							<h4>SOME D00D</h4>
 							<span class="des">Co-creater, Farmville</span>
 							<p>Quia vel explicabo vitae, magnam? Quasi quidem nisi fuga atque eos ipsum, soluta distinctio laborum animi aliquam, iusto.</p>
