--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<nav class="main_menu page-navigation">
 			<!-- <p>menu</p> -->
 			<!-- Menu elements -->
-		   	<!-- <div  class="open">
+		   	<div class="open" id="hamburger-menu">
 				<span id="cls"></span>
 				<span>
 					<ul class="sub-menu ">
@@ -63,7 +63,7 @@
 					</ul>
 				</span>
 				<span id="cls"></span>
-			</div> -->
+			</div>
 			<div id="menu">
 			<ul>
 				<li>
