--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<!-- <link rel="stylesheet" href="css/animate.css"> -->
 	<!-- <link rel="stylesheet" href="css/font-awesome.min.css"> -->
+	<!-- <link rel="stylesheet" href="css/priority-nav-core.css"> -->
 	<link rel="stylesheet" href="css/style.css">
 	
 	<!-- HTML5 shiv and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -31,7 +32,7 @@
 		<nav class="main_menu page-navigation">
 			<!-- <p>menu</p> -->
 			<!-- Menu elements -->
-		   	<!-- <div  class="open">
+		   	<div class="open" id="hamburger-menu">
 				<span id="cls"></span>
 				<span>
 					<ul class="sub-menu ">
@@ -64,7 +65,7 @@
 					</ul>
 				</span>
 				<span id="cls"></span>
-			</div> -->
+			</div>
 			<div id="menu">
 			<ul>
 				<li>
@@ -406,7 +407,7 @@
 		   		<div class="venue_cnt">
 		   			<h2>VENUE</h2>
 		   			<p class="content">
-		   				<span>National Institute of Design, R&D Campus</span><br>
+		   				<span>National Institute of Design, R&amp;D Campus</span><br>
 		   				12, HMT Link Road (off Tumkur Road),<br>
 		   				Peenya, Bengaluru - 560022
 					</p>
@@ -474,7 +475,8 @@
 <script src="js/mainAnimation.js"></script>
 <script type="text/javascript" src="js/jquery.rippler.min.js"></script>
 <script type="text/javascript" src="js/jquery.combinedScroll.js"></script>
-<script src="js/noframework.waypoints.min.js"></script>
+<!-- <script src="js/noframework.waypoints.min.js"></script> -->
+<!-- <script async src="js/priority-nav.js"></script> -->
 <script type="text/javascript" src="js/main.js"></script>
 
 
