--- a/index.html
+++ b/index.html
@@ -312,12 +312,15 @@
 			    				<span class="high evt">Cultural Event - Dance</span>
 			    				<span class="low">NID students</span>
 		    				</div>
+		    				<div class="download-schdl">
+ 		    					<a href="#">Download the Schedule</a>
+ 		    				</div>
 		    			</div>
 		    		</div>
 		    		<img class="day2-cutout-img" src="img/Final_backgrounds/Schedule-Day2-Holder.svg" alt="">
 		    		<!-- <div class="test"></div> -->
 		    	</div>
-		    	<div class="download_schedule"><a>Click here to download the complete schedule</a></div>
+		    	<!-- <div class="download_schedule"><a>Click here to download the complete schedule</a></div> -->
 		    </section>
 		   <!--/Schedule-->
 		   
