fixed nav for below 1200 px

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
 	<header id="main_header" class="main_header">
 		<!-- <div class="nid_logo" src=""></div> -->
-		<a href="#home"><img src="img/NID_white_logo.png" class="nid-logo-img" alt=""></a>
+		<a href="#home" class="nid-logo-img"></a>
 		<nav class="main_menu page-navigation">
 			<!-- <p>menu</p> -->
 			<!-- Menu elements -->
