--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
 		   <!--/Speakers-->
 		   
 		   <!--dLABS-->
-		    <section id="dlabs" class="dlabs">
+		    <section id="workshops" class="dlabs">
 		    	<div class="dlabs_cut_heading">
 		    		<h2>dLABS</h2>
 		    	
